--- a/package.json
+++ b/package.json
@@ -11,24 +11,38 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.1",
+    "@deepgram/sdk": "^4.11.2",
+    "@firebase/storage": "^0.14.0",
+    "@google/genai": "^1.14.0",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
+    "dotenv": "^17.2.1",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "firebase": "^12.1.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "inngest": "^3.40.1",
+    "jq": "^1.7.2",
     "lucide-react": "^0.539.0",
+    "moment": "^2.30.1",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "wav": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
