changes dashboard ui and landingpage and added login page to use the firebase auth

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",        // required for path aliases to work
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"]      // maps @/... to project root
     }
   }
 }
