--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@remotion/cli": "4.0.334",
+    "@remotion/player": "4.0.334",
     "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -40,12 +43,14 @@
     "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remotion": "4.0.334",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "wav": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.1.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6"
   }
